--- a/app-1-deployment.yaml
+++ b/app-1-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: app-1-dep
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: app-1
@@ -13,7 +13,8 @@ spec:
         app: app-1
     spec:
       containers:
-      - name: app-1-container
+      - name: app-1
         image: ghcr.io/denoslab/ensf400-sample-app:v1
+        imagePullPolicy: Always
         ports:
-        - containerPort: 8080
+        - containerPort: 3000
