--- a/app-1-ingress.yaml
+++ b/app-1-ingress.yaml
@@ -2,9 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app-1-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-weight: "70"
 spec:
   rules:
   - http:
@@ -13,6 +10,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: app-1-service
+            name: app-1-svc
             port:
               number: 8080
