--- a/app-1-service.yaml
+++ b/app-1-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-1-service
+  name: app-1-svc
 spec:
   selector:
     app: app-1
   ports:
     - protocol: TCP
       port: 8080
-      targetPort: 8080
+      targetPort: 3000
   type: ClusterIP
