--- a/app-2-deployment.yaml
+++ b/app-2-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: app-2-dep
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: app-2
@@ -13,7 +13,7 @@ spec:
         app: app-2
     spec:
       containers:
-      - name: app-2-container
-        image:  ghcr.io/denoslab/ensf400-sample-app:v2
+      - name: app-2
+        image: ghcr.io/denoslab/ensf400-sample-app:v2
         ports:
-        - containerPort: 8080
+        - containerPort: 3000
