--- a/app-2-ingress.yaml
+++ b/app-2-ingress.yaml
@@ -13,6 +13,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: app-2-service
+            name: app-2-svc
             port:
               number: 8080
