--- a/nginx-dep.yaml
+++ b/nginx-dep.yaml
@@ -13,14 +13,14 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx-container
+      - name: nginx
         image: nginx:1.14.2
         ports:
-        - containerPort: 8080
-        volumeMounts:                      # Adding volume mount for ConfigMap
+        - containerPort: 80
+        volumeMounts:
         - name: nginx-config-volume
-          mountPath: /etc/nginx/sites-available/nginx.cfg
+          mountPath: /etc/nginx/conf.d
       volumes:
       - name: nginx-config-volume
         configMap:
-          name: nginx-configmap           # Mounting the ConfigMap
+          name: nginx-configmap
