--- a/app-1-ingress.yaml
+++ b/app-1-ingress.yaml
@@ -6,7 +6,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /app
+      - path: /
         pathType: Prefix
         backend:
           service:
