--- a/app-2-ingress.yaml
+++ b/app-2-ingress.yaml
@@ -9,7 +9,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /app
+      - path: /
         pathType: Prefix
         backend:
           service:
