--- a/nginx-ingress.yaml
+++ b/nginx-ingress.yaml
@@ -8,7 +8,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /nginx
         pathType: Prefix
         backend:
           service:
